Button alignment in project slider. Fixed horizontal mobile view.

--- a/src/App.css
+++ b/src/App.css
@@ -46,12 +46,22 @@ a{
     color: inherit;
 }
 
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+.input-checkbox {
+-webkit-appearance: none;
+border-radius: 0;
+}
+
 @media only screen and (max-width: 1300px) {
     .wrapper {
         width: 85%;
     }
 }
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px), only screen and (max-height: 579px) {
     .wrapper {
         padding: 0 5px;
         box-sizing: border-box;
@@ -64,7 +74,7 @@ a{
         padding-top: 55px;
     }
 }
-@media only screen and (max-width: 579px){
+@media only screen and (max-width: 579px), only screen and (max-height: 579px){
     section{
         height: auto;
         margin: 50px auto;
