--- a/src/components/IntroSection.css
+++ b/src/components/IntroSection.css
@@ -79,3 +79,8 @@ a img{
         margin: 0;
     }
 }
+@media only screen and (max-height: 579px) {
+ .downBtn{
+    display: none;
+ }   
+}
